Creates search bar and button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,8 +30,12 @@
         <%= link_to "Register", "/register"%>
         <%= link_to "Log In", "/login" %>
       <% end %>
-
+      <%= form_tag search_index_path, method: :get, class: 'topnav' do %>
+        <%= search_field_tag :search, params[:search] %>
+        <%= button_tag "Search"%>
+      <%end %>
     </nav>
+
     <% flash.each do |name, msg| %>
       <div class= "<%=name%>-flash">
         <p><%= msg %></p>
