--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -48,9 +48,11 @@
     <h2>All Reviews</h2>
     <% @item.reviews.each do |review| %>
       <section id= 'review-<%=review.id%>'>
-        <h4><%= review.title %></h4>
+        <h2><u><%= review.title %></u></h2>
         <p><%= review.content %></p>
-        <p>Rating: <%= review.rating %>/5
+        <div id="star-rating">
+          <h2><%= render_stars(review.rating) %></h2>
+        </div> 
         <%= link_to "Edit", "/reviews/#{review.id}/edit" %>
         <%= link_to "Delete", "/reviews/#{review.id}", method: :delete %></p>
       </section>
