--- a/app/views/users/messages_show.html.erb
+++ b/app/views/users/messages_show.html.erb
@@ -6,4 +6,5 @@
   <h2>Date: <%= @message.created_at %></h2>
   <h2>Title: <%= @message.title %></h2>
   <h2>Message: <%= @message.body %></h2>
+  <%= button_to "Reply", "/profile/messages/#{@message.merchant.id}/new", method: :get %>
 </section>
