--- a/app/views/merchants/messages_show.html.erb
+++ b/app/views/merchants/messages_show.html.erb
@@ -7,4 +7,5 @@
   <h2>Title: <%= @message.title %></h2>
   <h2>Message: <%= @message.body %></h2>
   <%= button_to "Reply", "/merchants/#{@message.merchant.id}/messages/#{@message.merchant.id}/new", method: :get %>
+  <%= button_to "Delete", "/merchants/#{@message.merchant.id}/messages/#{@message.id}", method: :delete %>
 </section>
