--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Edit <%=link_to @item.name, "/items/#{@item.id}" %></h1>
 
-<center>
-  <%= render partial: 'form' %>
-</center>
+<%= form_for [@merchant, @item], url: "items/#{@item.id}" do |f| %>
+  <%= render 'form' %>
+<% end %>
