--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Create New Item For <%=link_to @merchant.name, "/merchants/#{@merchant.id}" %></h1>
 
-<center>
-  <%= render partial: 'form'%> 
+<%= form_for [@merchant, @item] url: "/items" do |f| %>
+  <%= render 'form'%>
 </center>
