--- a/app/views/merchant/items/new.html.erb
+++ b/app/views/merchant/items/new.html.erb
@@ -1,3 +1,3 @@
-<%= form_for [@merchant, @item], :url => { :action => "create" } do |form| %>
+<%= form_for [:merchant, @merchant, @item], url: "/merchant/items" do |form| %>
   <%= render partial: 'form', locals: { f: form } %>
 <% end %>
