Add button to message a merchant

--- a/app/views/user/orders/_show.html.erb
+++ b/app/views/user/orders/_show.html.erb
@@ -43,6 +43,7 @@
         <td><p><%= number_to_currency(item_order.price/100.to_f)%></p></td>
         <td><p><%= item_order.quantity%></p></td>
         <td><p><%= number_to_currency(item_order.subtotal/100.to_f)%></p></td>
+        <h4><%= button_to "Message Merchant", "/profile/orders/#{item_order.item.merchant_id}/new", method: :get %></h4>
       </section>
     </tr>
   <% end %>
