--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -15,13 +15,8 @@
       <% else %>
         <%= link_to "Activate User", "/admin/users/#{user.id}/toggle_active", method: :patch %>
       <% end %>
-
-      <%= form_for [:admin, user], url: "/admin/users/#{user.id}/role", class: "grid-item" do |f| %>
-
-        <%= f.label :role %>
-        <%= f.select :role, ['user', 'merchant_employee', 'merchant_admin', 'admin_user']%>
-        <%= f.submit %>
-      <% end %>
+    <h3>================</h3>
+      <%= render partial: 'role', locals: {user: user} %>
     <h3>================</h3>
     </section>
   <% end %>
