--- a/app/views/merchant/dashboard/_index.html.erb
+++ b/app/views/merchant/dashboard/_index.html.erb
@@ -1,8 +1,11 @@
 <h2><%= @merchant.name %></h2>
 <p><%= @merchant.address %> <%= @merchant.city %>, <%= @merchant.state %> <%= @merchant.zip %></p>
-
 <p><%= link_to "All #{@merchant.name} Items", "/merchant/items" unless current_admin_user? %></p>
 <p><%= link_to "All #{@merchant.name} Items", "/admin/merchants/#{@merchant.id}/items" if current_admin_user? %></p>
+<section >
+<p><%= link_to "Update Merchant", "/merchants/#{@merchant.id}/edit" %></p>
+<p><%= link_to "Delete Merchant", "/merchants/#{@merchant.id}", method: :delete  if @merchant.no_orders? %> </p>
+</section>
 
 <section class="grid-container">
   <% @merchant.pending_orders.each do | order |%>
