adds fullfillment to admin capabilities

--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,4 +1,59 @@
-<%= render "/user/orders/show" %>
+
+<section>
+
+  <table>
+    <tr>
+      <th>Name</th>
+      <th>Address</th>
+      <th>City</th>
+      <th>State</th>
+      <th>Zip</th>
+    </tr>
+    <tr>
+      <td><p><%= @order.name %> </p></td>
+      <td><p><%= @order.address %> </p></td>
+      <td><p><%= @order.city %> </p></td>
+      <td><p><%= @order.state %> </p></td>
+      <td><p><%= @order.zip %> </p></td>
+    </tr>
+  </table>
+</section>
+<section id="order-status">
+  <h2>Order ID: <%= @order.id %></h2>
+  <h2>Order Status: <%= @order.status.capitalize %></h2>
+  <h1 align = "center">Order Info</h1>
+</section>
+<center>
+  <table>
+    <tr>
+      <th>Image</th>
+      <th>Item</th>
+      <th>Price</th>
+      <th>Quantity</th>
+      <th>Subtotal</th>
+      <th>Fulfill</th>
+    </tr>
+
+  <% @order.item_orders.each do |item_order|%>
+    <tr>
+    <section id = "item-<%=item_order.item_id%>">
+        <td><p><img src=<%= item_order.item.image %>></p></td>
+        <td><p><%=link_to item_order.item.name, "/items/#{item_order.item_id}"%></p></td>
+        <td><p><%= number_to_currency(item_order.price/100.to_f)%></p></td>
+        <td><p><%= item_order.quantity%></p></td>
+        <td><p><%= number_to_currency(item_order.subtotal/100.to_f)%></p></td>
+        <% if item_order.fulfilled? %>
+          <td><p>Fulfilled</p></td>
+        <% elsif item_order.fulfillable? %>
+          <td><p><%= button_to "Fulfill", "/merchant/orders/#{@order.id}/item_orders/#{item_order.id}/fulfill", method: :patch %></p></td>
+        <% else %>
+          <td><p>Insufficient Inventory</p></td>
+        <% end %>
+      </section>
+    </tr>
+  <% end %>
+</table>
+
 
 <section id="order-cancel">
   <% if @order.pending? || @order.packaged? %>
