--- a/app/views/cart/show.html.erb
+++ b/app/views/cart/show.html.erb
@@ -1,9 +1,5 @@
 <h1>Cart</h1>
 
-<% if !current_user %>
-  <h2> Login needed to Checkout </h2>
-<% end %>
-
 <% if !@items.empty? %>
 <center>
 <table class = "cart-items">
@@ -50,7 +46,11 @@
 </table>
   <p>Total: <%= number_to_currency(cart.total/100.to_f) %></p>
   <p><%= link_to "Empty Cart", "/cart", method: :delete %></p>
-  <p><%= link_to "Checkout", "/profile/orders/new", method: :get %></p>
+  <% if current_user %>
+    <p><%= link_to "Checkout", "/profile/orders/new", method: :get%></p>
+  <% else %>
+    <p> Login needed to Checkout </p>
+  <% end %>
 <% else %>
   <h3 align= "center">Cart is currently empty</h3>
 <% end %>
