--- a/app/views/merchant/dashboard/_index.html.erb
+++ b/app/views/merchant/dashboard/_index.html.erb
@@ -3,6 +3,8 @@
 <p><%= link_to "All #{@merchant.name} Items", "/merchant/items" unless current_admin_user? %></p>
 <p><%= link_to "All #{@merchant.name} Items", "/admin/merchants/#{@merchant.id}/items" if current_admin_user? %></p>
 <p><%= link_to "Update Merchant", "/merchants/#{@merchant.id}/edit" %></p>
+<p><%= link_to "My Shop Coupons", "/merchant/coupons" %></p>
+
 <section class="grid-container">
   <% @merchant.pending_orders.each do | order |%>
   <section class = "grid-item" id='order-<%= order.id%>'>
