--- a/app/views/merchant/coupons/index.html.erb
+++ b/app/views/merchant/coupons/index.html.erb
@@ -3,7 +3,7 @@
 <% @coupons.each do |coupon| %>
 <section id="coupon-#{coupon.id}">
   <h2> <%=link_to coupon.name, "/merchant/coupons/#{coupon.id}" %> </h2>
+  <h2>Active: <%= coupon.active %></h2>
 </section>
 <% end %>
-
-<h3><%=link_to "Add A Coupon", "/merchant/coupons/new", method: :get%> </h3>
+<h3><%=link_to "Add Coupon", "/merchant/coupons/new", method: :get%> </h3>
